src/main/default/objects/C501_Merge_Account_History__c/C501_Merge_Account_History__c.object-meta.xml
<CustomObject>
    <label>Merge Account History</label>
    <nameField>
        <displayFormat>Merge History {0000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Merge Account Histories</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>