src/main/default/objects/C501_Merge_Account_History__c/fields/Field__c.field-meta.xml
<CustomField>
    <fullName>Field__c</fullName>
    <label>Field</label>
    <length>64</length>
    <required>true</required>
    <type>Text</type>
</CustomField>