src/main/default/objects/C501_Merge_Account_History__c/fields/Merge_Value__c.field-meta.xml
<CustomField>
    <fullName>Merge_Value__c</fullName>
    <label>Master Value</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>